gccida/g0/get_attr_type
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20931:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type  get_attr_type( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20934:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20937:4: error: expected ';' after expression
rtx v5; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20937:5: error: use of undeclared identifier 'v5'
rtx v5; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20939:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20940:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20941:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20942:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20943:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20944:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20945:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20946:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20947:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20948:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // [rsp+0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20957:60: error: expected expression
if ( **( _WORD **)&insn[2] != 40 && asm_noperands( *( rtx *)&insn[2]) < 0 ) 
                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20958:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 21978, "get_attr_type"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:20958:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 21978, "get_attr_type"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:21172:62: error: use of undeclared identifier 'recog_data_0'
else if ( flag_pic && symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) ) 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/insn-attrtab.c:21206:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& aligned_operand( recog_data_0.operand[1], HImode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_type/src/obj/insn-attrtab.o] Error 1
